v2/myK8s/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-ingress
  namespace: todo-app
  # namespace: todo-app
spec:
  rules:
    # - host: todo-app.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-ui-service
                port:
                  number: 8091
